syntax = "proto3";

package orderer;

option go_package = "github.com/ddr4869/minifab/proto/orderer";

import "proto/common/common.proto";

service OrdererService {
    rpc CreateChannel(stream common.Envelope) returns (stream common.Block) {}
}


message BootstrapResponse {
    common.StatusCode status = 1;
    string message = 2;
    string genesis_file = 3;
    string channel_id = 4;
}

